Record WP9b FABRIC acceptance